[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/menus/ShopItem1.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/RobotoBold14.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/sprites/Purchase Menu Container.png" type="Texture" id=3]
[ext_resource path="res://scenes/menus/MenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/RobotoBold6.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/sprites/Purchase Weapon&Icon Icons.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/Purchase Inspector Window.png" type="Texture" id=7]
[ext_resource path="res://resources/ShopItemTypeButttonGroup.tres" type="ButtonGroup" id=8]
[ext_resource path="res://assets/fonts/RobotoBold18.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/sprites/weapon icons/Baby Missile Icon.png" type="Texture" id=10]
[ext_resource path="res://scripts/Shop.gd" type="Script" id=11]
[ext_resource path="res://resources/items/Missile.tres" type="Resource" id=12]
[ext_resource path="res://resources/items/Nuke.tres" type="Resource" id=13]
[ext_resource path="res://resources/items/BabyMissile.tres" type="Resource" id=14]
[ext_resource path="res://resources/items/BabyNuke.tres" type="Resource" id=15]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopWindow" type="TextureRect" parent="Center"]
margin_left = 120.0
margin_top = 30.0
margin_right = 840.0
margin_bottom = 510.0
texture = ExtResource( 3 )

[node name="Header" type="MarginContainer" parent="Center/ShopWindow"]
margin_right = 720.0
margin_bottom = 21.0
rect_min_size = Vector2( 720, 21 )
custom_constants/margin_right = 21
custom_constants/margin_left = 21
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderHBox" type="HBoxContainer" parent="Center/ShopWindow/Header"]
margin_left = 21.0
margin_right = 699.0
margin_bottom = 21.0
rect_min_size = Vector2( 0, 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Center/ShopWindow/Header/HeaderHBox"]
margin_top = 1.0
margin_right = 249.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 19 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Kurt"

[node name="CashTitle" type="Label" parent="Center/ShopWindow/Header/HeaderHBox"]
margin_left = 253.0
margin_top = 1.0
margin_right = 293.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 19 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Cash:"

[node name="Cash" type="Label" parent="Center/ShopWindow/Header/HeaderHBox"]
margin_left = 297.0
margin_top = 1.0
margin_right = 546.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 19 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "$1,000,000"

[node name="Rounds" type="Label" parent="Center/ShopWindow/Header/HeaderHBox"]
margin_left = 550.0
margin_top = 1.0
margin_right = 678.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 19 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "20 Rounds Remain"

[node name="ItemsVBox" type="VBoxContainer" parent="Center/ShopWindow"]
margin_left = 23.0
margin_top = 38.0
margin_right = 348.0
margin_bottom = 457.0
rect_min_size = Vector2( 325, 419 )
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopItem1" parent="Center/ShopWindow/ItemsVBox" instance=ExtResource( 1 )]

[node name="ShopItem2" parent="Center/ShopWindow/ItemsVBox" instance=ExtResource( 1 )]
margin_top = 20.0
margin_bottom = 36.0
weapon_data = ExtResource( 12 )

[node name="ShopItem3" parent="Center/ShopWindow/ItemsVBox" instance=ExtResource( 1 )]
margin_top = 40.0
margin_bottom = 56.0
weapon_data = ExtResource( 15 )

[node name="ShopItem4" parent="Center/ShopWindow/ItemsVBox" instance=ExtResource( 1 )]
margin_top = 60.0
margin_bottom = 76.0
weapon_data = ExtResource( 13 )
defensive_data = ExtResource( 14 )

[node name="ShopItem5" parent="Center/ShopWindow/ItemsVBox" instance=ExtResource( 1 )]
margin_top = 80.0
margin_bottom = 96.0

[node name="ShopItem6" parent="Center/ShopWindow/ItemsVBox" instance=ExtResource( 1 )]
margin_top = 100.0
margin_bottom = 116.0

[node name="ShopItem7" parent="Center/ShopWindow/ItemsVBox" instance=ExtResource( 1 )]
margin_top = 120.0
margin_bottom = 136.0

[node name="ShopItem8" parent="Center/ShopWindow/ItemsVBox" instance=ExtResource( 1 )]
margin_top = 140.0
margin_bottom = 156.0

[node name="ShopItem9" parent="Center/ShopWindow/ItemsVBox" instance=ExtResource( 1 )]
margin_top = 160.0
margin_bottom = 176.0

[node name="ShopItem10" parent="Center/ShopWindow/ItemsVBox" instance=ExtResource( 1 )]
margin_top = 180.0
margin_bottom = 196.0

[node name="ItemType" type="VBoxContainer" parent="Center/ShopWindow"]
margin_left = 386.0
margin_top = 39.0
margin_right = 455.0
margin_bottom = 81.0
rect_min_size = Vector2( 69, 42 )
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TypeLabel" type="Label" parent="Center/ShopWindow/ItemType"]
margin_right = 69.0
margin_bottom = 9.0
rect_min_size = Vector2( 69, 8 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Weapons/Defensive"
autowrap = true

[node name="ItemTypeIcon" type="TextureRect" parent="Center/ShopWindow/ItemType"]
margin_top = 11.0
margin_right = 69.0
margin_bottom = 20.0
rect_min_size = Vector2( 69, 9 )
texture = ExtResource( 6 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHBox" type="HBoxContainer" parent="Center/ShopWindow/ItemType"]
margin_top = 22.0
margin_right = 69.0
margin_bottom = 46.0
rect_min_size = Vector2( 69, 24 )
custom_constants/separation = 13

[node name="Weapon" type="CheckBox" parent="Center/ShopWindow/ItemType/ButtonHBox"]
margin_right = 24.0
margin_bottom = 24.0
custom_styles/focus = SubResource( 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
group = ExtResource( 8 )

[node name="Defensive" type="CheckBox" parent="Center/ShopWindow/ItemType/ButtonHBox"]
margin_left = 37.0
margin_right = 61.0
margin_bottom = 24.0
custom_styles/focus = SubResource( 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
group = ExtResource( 8 )

[node name="Inspector" type="Control" parent="Center/ShopWindow"]
margin_left = 386.0
margin_top = 170.0
margin_right = 426.0
margin_bottom = 210.0
rect_min_size = Vector2( 306, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Center/ShopWindow/Inspector"]
margin_top = -30.0
margin_right = 40.0
rect_min_size = Vector2( 40, 30 )
texture = ExtResource( 10 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="Center/ShopWindow/Inspector"]
margin_left = 47.0
margin_top = -30.0
margin_right = 247.0
rect_min_size = Vector2( 200, 30 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Baby Missile"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InspectorWindow" type="NinePatchRect" parent="Center/ShopWindow/Inspector"]
margin_right = 306.0
margin_bottom = 200.0
rect_min_size = Vector2( 306, 200 )
texture = ExtResource( 7 )
patch_margin_left = 2
patch_margin_top = 1
patch_margin_right = 2
patch_margin_bottom = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDetails" type="Label" parent="Center/ShopWindow/Inspector/InspectorWindow"]
margin_left = 2.0
margin_right = 304.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Item has a blast radius of 20 with a things and stuff and all that."
autowrap = true
max_lines_visible = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButton" parent="Center/ShopWindow" instance=ExtResource( 4 )]
margin_left = 478.0
margin_top = 103.0
margin_right = 600.0
margin_bottom = 133.0
rect_min_size = Vector2( 122, 30 )

[node name="Label" parent="Center/ShopWindow/BuyButton" index="1"]
custom_fonts/font = ExtResource( 9 )
text = "Purchase"

[node name="InventoryButton" parent="Center/ShopWindow" instance=ExtResource( 4 )]
margin_left = 398.0
margin_top = 420.0
margin_right = 520.0
margin_bottom = 444.0
rect_min_size = Vector2( 122, 24 )

[node name="Label" parent="Center/ShopWindow/InventoryButton" index="1"]
custom_fonts/font = ExtResource( 2 )
text = "Inventory"

[node name="DoneButton" parent="Center/ShopWindow" instance=ExtResource( 4 )]
margin_left = 558.0
margin_top = 420.0
margin_right = 680.0
margin_bottom = 444.0
rect_min_size = Vector2( 122, 24 )

[node name="Label" parent="Center/ShopWindow/DoneButton" index="1"]
custom_fonts/font = ExtResource( 2 )
text = "Done"

[connection signal="toggled" from="Center/ShopWindow/ItemType/ButtonHBox/Weapon" to="." method="_on_Weapon_toggled"]
[connection signal="toggled" from="Center/ShopWindow/ItemType/ButtonHBox/Defensive" to="." method="_on_Defensive_toggled"]
[connection signal="pressed" from="Center/ShopWindow/BuyButton/Button" to="." method="_on_Purchase_Button_pressed"]
[connection signal="pressed" from="Center/ShopWindow/DoneButton/Button" to="." method="_on_DoneButton_pressed"]

[editable path="Center/ShopWindow/BuyButton"]
[editable path="Center/ShopWindow/InventoryButton"]
[editable path="Center/ShopWindow/DoneButton"]
